--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.swarmic.examples</groupId>
     <artifactId>swarmic-examples</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>camel-metrics</module>
@@ -41,7 +42,7 @@
             <dependency>
                 <groupId>org.swarmic</groupId>
                 <artifactId>swarmic-bom</artifactId>
-                <version>${project.version}</version>
+                <version>1.0.0.Alpha1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
